crates/oxc_react_compiler/tests/snapshots/inner-function__nullable-objects__assume-invoked__conditional-call-chain.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/inner-function/nullable-objects/assume-invoked/conditional-call-chain.tsx
---
import { c as _c } from "react/compiler-runtime";
import { useRef } from "react";
import { Stringify } from "shared-runtime";
function Component(t0) {
	const $ = _c(7);
	const { a, b } = t0;
	let t1;
	if ($[0] !== a) {
		t1 = () => {
			console.log(a.value);
		};
		$[0] = a;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	const logA = t1;
	let t2;
	if ($[2] !== b) {
		t2 = () => {
			console.log(b.value);
		};
		$[2] = b;
		$[3] = t2;
	} else {
		t2 = $[3];
	}
	const logB = t2;
	const hasLogged = useRef(false);
	let t3;
	if ($[4] !== logA || $[5] !== logB) {
		const log = () => {
			if (!hasLogged.current) {
				logA();
				logB();
				hasLogged.current = true;
			}
		};
		t3 = <Stringify log={log} shouldInvokeFns={true} />;
		$[4] = logA;
		$[5] = logB;
		$[6] = t3;
	} else {
		t3 = $[6];
	}
	return t3;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{
		a: { value: 1 },
		b: { value: 2 }
	}],
	sequentialRenders: [{
		a: { value: 1 },
		b: { value: 2 }
	}, {
		a: { value: 3 },
		b: { value: 4 }
	}]
};
