crates/oxc_react_compiler/tests/snapshots/inner-function__nullable-objects__assume-invoked__direct-call.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/inner-function/nullable-objects/assume-invoked/direct-call.ts
---
import { c as _c } from "react/compiler-runtime";
import { useState } from "react";
import { useIdentity } from "shared-runtime";
function useMakeCallback(t0) {
	const $ = _c(5);
	const { obj } = t0;
	const [state, setState] = useState(0);
	let t1;
	if ($[0] !== obj || $[1] !== state) {
		t1 = () => {
			if (obj.value !== state) {
				setState(obj.value);
			}
		};
		$[0] = obj;
		$[1] = state;
		$[2] = t1;
	} else {
		t1 = $[2];
	}
	const cb = t1;
	useIdentity();
	cb();
	let t2;
	if ($[3] !== cb) {
		t2 = [cb];
		$[3] = cb;
		$[4] = t2;
	} else {
		t2 = $[4];
	}
	return t2;
}
export const FIXTURE_ENTRYPOINT = {
	fn: useMakeCallback,
	params: [{ obj: { value: 1 } }],
	sequentialRenders: [{ obj: { value: 1 } }, { obj: { value: 2 } }]
};
